--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,60 @@
-events{}
+events {}
 
 http {
-    server{
+    include /etc/nginx/mime.types;
+    server_tokens off;
+    client_max_body_size 10M;
+
+    upstream django {
+        server web:8000;
+    }
+
+    server {
         listen 80;
-        server_name domen.com www.domen.com
-        
+        server_name b00king.ru www.b00king.ru;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name b00king.ru www.b00king.ru;
+
+        ssl_certificate /etc/letsencrypt/live/b00king.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/b00king.ru/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_session_tickets off;
+
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
         location / {
-            proxy_pass http://web:8000;
+            proxy_pass http://django;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 10s;
+            proxy_read_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_buffering off;
         }
 
         location /static/ {
             alias /app/static/;
+            expires 30d;
+            access_log off;
         }
 
         location /media/ {
             alias /app/media/;
+            expires 7d;
+            access_log off;
         }
 
-
-
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log warn;
     }
 }
